2006-09-19  Andreas Kupries  <andreask@activestate.com>

	* profiler.man: Bumped version to 0.3
	* profiler.tcl:
	* pkgIndex.tcl:

2006-01-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* profiler.test: More boilerplate simplified via use of test support.

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* profiler.test: Hooked into the new common test support code.

2005-11-02  David N. Welton  <davidw@dedasys.com>

	* profiler.tcl (::profiler::printsorted): Added a printsorted proc
	in order to print stuff out sorted with different keys.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-04-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* profiler.man: Synchronized indexed and provided versions.
	* pkgIndex.tcl

2005-03-30  Eric Melski  <ericm@electric-cloud.com>

	* profiler.tcl (::profiler::TraceHandler): Make sure that caller names
	always have a :: prefix, to avoid getting confused by "::foo" versus
	"foo", which actually refer to the same procedure [Bug 1172938].
	Incremented version number to 0.2.3.

	* profiler.test: Added tests to verify fix for Bug 1172938.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2004-02-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* profiler.tcl (stats): Bugfix by Bob Techentin, preventing a
	  division by zero if the average time has become zero.

2003-10-29  Andreas Kupries  <andreask@activestate.com>

	* profiler.man: Updated documented signature of 'reset', missed
	  the pattern argument [Bug 832487].
