@@ -1,3 +1,9 @@
+2006-09-27  Andreas Kupries  <andreask@activestate.com>
+
+	* profiler.test: [SF Tcllib Bug 1272913]. Fixed. Added constraint
+	  for 8.4- specific tests, duplicated testcase profiler-7.2 to
+	  capture the differences in results generated by 8.5+ vs 8.4-.
+
 2006-09-19  Andreas Kupries  <andreask@activestate.com>
 
 	* profiler.man: Bumped version to 0.3
